<resources>
    <string name="app_name">VuelaV</string>
    <string name="title_home">Inicio</string>
    <string name="title_promotions">Promociones</string>
    <string name="title_trips">Mis vuelos</string>
    <string name="title_account">Mi cuenta</string>
    <string name="fab_content_desc">Reservar</string>
    <string name="labelName">Nombres</string>
    <string name="labelLastName">Apellidos</string>
    <string name="edit">Editar</string>
    <string name="labelCedula">Cédula</string>
    <string name="title_login">Iniciar Sesión</string>
    <string name="title_signup">Registrarse</string>
    <string name="textSubLogin">¡Vuela con Vuela V!</string>
    <string name="labelEmail">Correo electronico</string>
    <string name="title_ingresar">Ingresar</string>
    <string name="labelPassword">Contraseña</string>
    <string name="labelVuelaV">Vuela V</string>
    <string name="title_new_account">Crear cuenta</string>
    <string name="labelWelcome">Bienvenido</string>
    <string name="textNewAccount">Crear una cuenta</string>
    <string name="textExistsAccount">Ya tengo una cuenta</string>
    <string name="description_img">Imagen</string>
    <string name="textLlega">Llega a donde siempre has soñado!</string>
    <string name="textPromotions">Los mejores precios y beneficios para ti</string>
    <string name="textSearch">Buscar mi destino</string>
    <string name="textPopular">Destinos populares</string>
    <string name="labelFechaNacimiento">Fecha de nacimiento</string>
    <string name="textCuenca">Cuenca</string>
    <string name="buttonBuyTicket">Reservar</string>
    <string name="logout">Cerrar sesión</string>
    <string name="text_save">Guardar</string>
    <string name="text_cancel">Cancelar</string>
    <string name="buttonVerMas">Ver más</string>
    <string name="textDesde">Viajar desde</string>
    <string name="textHasta">Hasta</string>
    <string name="txtFrom">Desde</string>
    <string name="txtSearchText">Buscar</string>
    <string name="buttonReservar">Reservar</string>
    <string name="txtElegirAsiento">Elige tu asiento</string>
    <string name="txtContinue">Continuar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtMaletas">¿Llevas equipaje?</string>
    <string name="labelNumMaletas">Maletas</string>
    <string name="labelPeso">Peso</string>
    <string name="txtBuyTicket">Comprar Boleto</string>
    <string name="txtVisa">Visa</string>
    <string name="txtMasterCard">MasterCard</string>
    <string name="txtDiscover">Discover</string>
    <string name="txtDinnersClub">Dinners Club</string>
    <string name="txtTipoPago">Pagar con</string>
    <string name="textNuestroProducto">Nuestro Producto</string>
    <string name="textMejoresViajes">Desde casa o, incluso, desde nuestro teléfono móvil podemos tomar el control de nuestras vacaciones, sin ningún intermediario, y ver destinos, aerolíneas, precios, horarios… comparar, elegir y comprar</string>
    <string name="txtMejores">Mejores Viajes</string>
    <string name="txtPersonal">Personal Capacitado</string>
    <string name="textCapacitado">Al contar con un personal altamente capacitado garantizamos tu Vuelo en todos nuestros servicios y promociones</string>
    <string name="txtDivider">----------------------------------------------------</string>
    <string name="txtPasajero">Pasajero</string>
    <string name="txtAsiento">Asiento</string>
    <string name="txtNumVuelo">Num Vuelo</string>
    <string name="txtSala">Sala Espera</string>
    <string name="txtSalida">Fecha</string>
    <string name="txtContact">Contáctanos</string>
    <string name="labelDescripcion">Asunto</string>
    <string name="labelSend">Enviar</string>
</resources>