<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.luna.vuelav.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_promotions"
        android:name="com.luna.vuelav.ui.promotions.PromotionsFragment"
        android:label="@string/title_promotions"
        tools:layout="@layout/fragment_promotions" />

    <fragment
        android:id="@+id/navigation_trips"
        android:name="com.luna.vuelav.ui.trips.TripsFragment"
        android:label="@string/title_trips"
        tools:layout="@layout/fragment_trips" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.luna.vuelav.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

</navigation>